--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
 </nav>
 
        <div class="header-image">
-              <img src="img/Homecover.png" class="event-main-image" />
+<!--               <img src="img/Homecover.png" class="event-main-image" />
         <a href="new_event.html">
           <img src="img/Home_uibutton.png" class="event-button" />
         </a>
         <a href="new_event.html">
           <img src="img/mobile_banner_homepage.png" class="event-mobile" />
-        </a>
+        </a> -->
        </div>
       <div class="row">
         <div class="column left">
