--- a/certificates.html
+++ b/certificates.html
@@ -109,7 +109,7 @@
         </div>
         <div class="form-group row row1 flex-sm-row same-row">
           <label for="inputPassword3" class="col-sm-2 col-form-label">Role</label>
-          <select class="custom-select custom-select-sm " name="Role" required>
+          <select class="custom-select custom-select-sm " id="rj" name="Role" required>
             <label for="text" class="col-sm-2 col-form-label" >Role</label>
             <option selected></option>
             <option value="1">As a participant</option>
@@ -118,8 +118,8 @@
         </div>
         <div class="form-group row">
           <div class="custom-file">
-            <input type="file" class="custom-file-input custom-file-input-sm" id="customFile"name="Proof">
-            <label class="custom-file-label" for="customFile">Proof</label>
+            <label class="proof" for="myfile">Proof</label>
+            <input class="myfile" type="file" id="myfile" name="myfile"><br>
           </div>
         </div>
 
