--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
           <li class="nav-item links">
                 <a class="nav-link links" href="eve1.html">memoirs.</a>
             </li>
+            <li class="nav-item links">
+              <a class="nav-link links" href="gallery2.html">gallery.</a>
+          </li>
         </ul>
         <ul class="navbar-nav sm-icons mr-0 cr">
 
@@ -67,12 +70,12 @@
 </nav>
 
        <div class="header-image">
-              <img src="img/Homecover.png" class="event-main-image" />
+              <img src="img/Kalopsia.png" class="event-main-image" />
         <a href="new_event.html">
           <img src="img/Home_uibutton.png" class="event-button" />
         </a>
         <a href="new_event.html">
-          <img src="img/mobile_banner_homepage.png" class="event-mobile" />
+          <img src="img/Kalopsia.png" class="event-mobile" />
         </a>
        </div>
       <div class="row">
