--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>Pratibimb</title>
   </head>
   <body>
+    <!-- pratibimb website develop -->
     <nav class="navbar navbar-expand-lg navbar-dark " style="background-color:#2B2929;">
     <a class="navbar-brand" href="#"><img class="logo" src="img/Pratibimb logo shirt.png"></a>
     <button class="navbar-toggler cl" type="button" data-toggle="collapse" data-target="#myNavbarToggler10"
