--- a/contact.html
+++ b/contact.html
@@ -90,35 +90,43 @@
       <div class="row3 flex-container">
         <div class="column3 form-contact">
           <h2 style="color: #E0E0E0;">Request a call/Ask a query.</h2>
-          <form class="form-cont">
+          <form class="form-cont"  autocomplete="off" id="contactForm">
+            <div class="alert1" style=" width: 100%;
+              background-color: #7AD70D;;
+              color: #fff;
+              height: 5vh;
+              text-align: center;
+              padding: 2px 2px;
+              margin-bottom: 15px;
+              display: none;">Details received!</div>
             <div class="form-group row">
               <label for="inputEmail3" class="col-sm-2 col-form-label">Name</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control  form-control-sm" id="inputEmail3">
+                <input type="text" class="form-control  form-control-sm" id="name" required>
               </div>
             </div>
             <div class="form-group row">
               <label for="inputEmail3" class="col-sm-2 col-form-label">Phone</label>
               <div class="col-sm-10">
-                <input type="tel" class="form-control  form-control-sm" id="inputEmail3">
+                <input type="tel" class="form-control  form-control-sm" id="phone" required>
               </div>
             </div>
             <div class="form-group row">
               <label for="inputEmail3" class="col-sm-2 col-form-label">E-mail</label>
               <div class="col-sm-10">
-                <input type="email" class="form-control  form-control-sm" id="inputEmail3">
+                <input type="email" class="form-control  form-control-sm" id="eId" required>
               </div>
             </div>
             <div class="form-group row">
               <label for="inputAgenda3" class="col-sm-2 col-form-label">Agenda</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control  form-control-sm" id="inputAgenda3">
+                <input type="text" class="form-control  form-control-sm" id="agenda" required>
               </div>
             </div>
             
             <div class="form-group row">
               <div class="col-sm-10">
-                <input type="submit" class="submit" name="Submit">
+                <input type="submit" class="submit" name="submit" id="submit">
               </div>
             </div>
           </form>
@@ -170,7 +178,9 @@
     </div>
 
     </div>
-
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script src="db/contact.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 
