--- a/eve1.html
+++ b/eve1.html
@@ -11,6 +11,16 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style_responsive.css">
     <link rel="stylesheet" href="eve1.css">
+
+
+
+    <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         crossorigin="anonymous"></script>
@@ -52,8 +62,9 @@
                     <a class="nav-link" href="contact.html">contact.</a>
                 </li>
                 <li class="nav-item links">
-                <a class="nav-link links" href="eve1.html">memoirs.</a>
-            </li>
+                    <a class="nav-link links" href="eve1.html">memoirs.</a>
+                </li>
+               
             </ul>
             <ul class="navbar-nav sm-icons mr-0 cr">
 
@@ -77,57 +88,101 @@
     </nav>
 
     <div class="o_videos">
-        <div class="heading"><h1 class="text-center"style="margin-top: 4rem; margin-bottom: 1.5rem;">Echoes.</h1><h3 class="text-center">The never fading ones.</h3></div>
-        <p style="text-align: center; margin: 2rem;margin-bottom :4rem ;">Pratibimb completes ten years of existence on the 19th of August, 2021. Here are the glimpses of some pleasant recollections.
+        <div class="heading">
+            <h1 class="text-center" style="margin-top: 4rem; margin-bottom: 1.5rem;">Echoes.</h1>
+            <h3 class="text-center">The never fading ones.</h3>
+        </div>
+        <p style="text-align: center; margin: 2rem;margin-bottom :4rem ;">Pratibimb completes ten years of existence on
+            the 19th of August, 2021. Here are the glimpses of some pleasant recollections.
 
-            <br><i style=" color:#444444">Every memory has a soundtrack of its own.</i></p>
-        <div class="video_container">
+            <br><i style=" color:#444444">Every memory has a soundtrack of its own.</i>
+        </p>
+        <div class="video_container ">
             <div class="video">
-                <video src="PratiDecade_1.mp4"></video>
+                <a href="PratiDecade_1.mp4" class="fancybox" data-fancybox="gallery1"> <video
+                        src="PratiDecade_1.mp4" muted></video>
+                </a>
             </div>
             <div class="video">
-                <video src="PratiDecade_2.mp4"></video>
+                <a href="PratiDecade_2.mp4" class="fancybox" data-fancybox="gallery1"> <video
+                        src="PratiDecade_2.mp4" muted></video>
+                </a>
             </div>
             <div class="video">
-                <video src="PratiDecade_3.mp4"></video>
+                <a href="PratiDecade_3.mp4" class="fancybox" data-fancybox="gallery1"> <video
+                        src="PratiDecade_3.mp4" muted></video>
+                </a>
+
             </div>
             <div class="video">
-                <video src="PratiDecade_4.mp4"></video>
+                <a href="PratiDecade_4.mp4" class="fancybox" data-fancybox="gallery1"> <video
+                        src="PratiDecade_4.mp4" muted></video>
+
+                </a>
             </div>
             <div class="video">
-                <video src="PratiDecade_5.mp4"></video>
+                <a href="PratiDecade_5.mp4" class="fancybox" data-fancybox="gallery1"> <video
+                        src="PratiDecade_5.mp4" muted></video>
+
+                </a>
             </div>
             <div class="video">
-                <video src="PratiDecade_6.mp4"></video>
+                <a href="PratiDecade_6.mp4" class="fancybox" data-fancybox="gallery1"> <video
+                        src="PratiDecade_6.mp4" muted></video>
+
+                </a>
             </div>
             <div class="video">
-                <video src="PratiDecade_7.mp4"></video>
+                <a href="PratiDecade_7.mp4" class="fancybox" data-fancybox="gallery1"> <video
+                        src="PratiDecade_7.mp4" muted></video>
+
+                </a>
             </div>
             <div class="video">
-                <video src="PratiDecade_8.mp4"></video>
+                <a href="PratiDecade_8.mp4" class="fancybox" data-fancybox="gallery1"> <video
+                        src="PratiDecade_8.mp4" muted></video>
+
+                </a>
             </div>
             <div class="video">
-                <video src="PratiDecade_9.mp4"></video>
+                <a href="PratiDecade_9.mp4" class="fancybox" data-fancybox="gallery1"> <video
+                        src="PratiDecade_9.mp4" muted></video>
+
+                </a>
             </div>
             <div class="video">
-                <video src="PratiDecade_10.mp4"></video>
+                <a href="PratiDecade_10.mp4" class="fancybox" data-fancybox="gallery1"> <video
+                        src="PratiDecade_10.mp4" muted></video>
+                </a>
             </div>
             <div class="video">
-                <video src="PratiDecade_11.mp4"></video>
+                <a href="PratiDecade_11.mp4" class="fancybox" data-fancybox="gallery1"> <video
+                        src="PratiDecade_11.mp4" muted></video>
+                </a>
             </div>
             <div class="video">
-                <video src="PratiDecade_12.mp4"></video>
+                <a href="PratiDecade_12.mp4" class="fancybox" data-fancybox="gallery1"> <video
+                        src="PratiDecade_12.mp4" muted></video>
+                </a>
             </div>
             <div class="video">
-                <video src="PratiDecade_13.mp4"></video>
+                <a href="PratiDecade_13.mp4" class="fancybox" data-fancybox="gallery1"> <video
+                        src="PratiDecade_13.mp4" muted></video>
+                </a>
             </div>
             <div class="video">
-                <video src="PratiDecade_14.mp4"></video>
+                <a href="PratiDecade_14.mp4" class="fancybox" data-fancybox="gallery1"> <video
+                        src="PratiDecade_14.mp4" muted></video>
+                </a>
             </div>
             <div class="video">
-                <video src="PratiDecade_15.mp4"></video>
+                <a href="PratiDecade_15.mp4" class="fancybox" data-fancybox="gallery1"> <video
+                        src="PratiDecade_15.mp4" muted></video>
+                </a>
             </div>
-            
+
+
+
         </div>
     </div>
     <br>
@@ -175,15 +230,15 @@
 
     </div>
     <script>
-        var video=document.querySelectorAll('video')
+        var video = document.querySelectorAll('video')
 
-        video.forEach(play=>play.addEventListener('click',()=>{
+        video.forEach(play => play.addEventListener('click', () => {
             play.classList.toggle('active');
-            if(play.paused){
+            if (play.paused) {
                 play.play();
-            }else{
+            } else {
                 play.pause();
-                play.currentTime=0;
+                play.currentTime = 0;
             }
         }))
     </script>
@@ -194,7 +249,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
         integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
         crossorigin="anonymous"></script>
-
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <!-- <script> sr.reveal('.home-title',{});
+    sr.reveal('.animate1',{delay:400});
+    sr.reveal('.animate4',{delay: 400});
+    sr.reveal('.animate7',{ interval: 200});</script> -->
 
 </body>
 
