--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </nav>
 
        <div class="header-image">
-              <!-- <img src="img/Kalopsia.png" class="event-main-image" /> -->
+              <img src="img/Kalopsia.png" class="event-main-image" />
         <a href="new_event.html">
           <!-- <img src="img/Home_uibutton.png" class="event-button" /> -->
         </a>
