--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
     </div>
 </nav>
 
-       <div class="header-image">
+   <div class="header-image">
               <img src="img/Kalopsia.png" class="event-main-image" />
         <a href="new_event.html">
-          <!-- <img src="img/Home_uibutton.png" class="event-button" /> -->
+          <img src="img/Register_uibutton.png" class="event-button" />
         </a>
         <a href="new_event.html">
           <!-- <img src="img/Kalopsia.png" class="event-mobile" /> -->
