--- a/new_event.html
+++ b/new_event.html
@@ -121,11 +121,11 @@ TIME– 3:00 PM to 6:00 PM
   </div>
   <div class="teaser">
     <h2 class="text-center" style="color:#ffffff">Teaser</h2>
-    <video src="img/Meraki Teaser-encoded.mp4" controls></video>
+    <video src="img/Teaser Kalopsiav12.mp4" controls></video>
   </div>
   <div class="participate" style="background: #fff;">
     <!-- <img class="part_img" src="img/Register_uibutton.png" alt=""> -->
-    <a href="https://forms.gle/CuaHJAdFzbXT74Fk7"><img class="part1_img" src="img/Register_uibutton.png" alt=""></a>
+    <a href="form.html"><img class="part1_img" src="img/Register_uibutton.png" alt=""></a>
   </div>
   <div class="o_videos color_change" style="background-color: #000000">
     <div class="heading">
@@ -217,7 +217,7 @@ TIME– 3:00 PM to 6:00 PM
   </div>
 
   <div class="registor" style="background-color: #fff;text-align: center;">
-   <a><img class="part1_img" style="padding-top: 1em;cursor: pointer;"src="img/Register_uibutton.png" alt=""></a> 
+   <a href="form.html"><img class="part1_img" style="padding-top: 1em;cursor: pointer;"src="img/Register_uibutton.png" alt=""></a> 
   </div>
 
   <div class="flex-xontainer footer">
