Updated for non-gs students

--- a/form.html
+++ b/form.html
@@ -79,6 +79,15 @@
   <img src="img/Kalopsia Poster (1) 1.png" class="k_img">
   <h3 class="text-center reg_head" style="color: #B91900;">Registration form - Kalopsia</h3>
   <form id="Registration-Kalopsia" autocomplete="off">
+    <form style="margin-top:2rem;" id="membershipForm" autocomplete="off">
+      <div class="alert1" style=" width: 80%;
+      background-color: #B91900;
+      color: #fff;
+      height: 5vh;
+      text-align: center;
+      padding: 2px 2px;
+      margin-bottom: 15px;
+      display: none;">You have successfully registered for Kalopsia!</div>
     <div class="form-group row form-inp">
       <label for="inputEmail3" class="col-sm-2 col-form-label">Name</label>
       <div class="col-sm-10">
@@ -188,9 +197,9 @@
         </div>
         <div class="form-check">
           <input class="form-check-input offlinePayment" type="radio" name="flexRadioDefault3"
-            value="Willing to pay 100/- for one workshop(material cost included)">
+            value="Willing to pay 100/- for both workshops(material cost included)">
           <label class="form-check-label" for="flexRadioDefault3">
-            Willing to pay 100/- for one workshop(material cost included)
+            Willing to pay 100/- for both workshops(material cost included)
           </label>
         </div>
         <div class="form-check">
@@ -230,13 +239,13 @@
               Not attending online
             </label>
           </div>
-          <div class="form-check">
+          <!-- <div class="form-check">
             <input class="form-check-input onlinePayment" type="radio" name="flexRadioDefault4"
               value="Member of Pratibimb(need not pay)">
             <label class="form-check-label" for="flexRadioDefault4">
               Member of Pratibimb(need not pay)
             </label>
-          </div>
+          </div> -->
         </div>
 
         <div class="mb-3 reg_gs">
@@ -277,13 +286,13 @@
               Phonepe
             </label>
           </div>
-          <div class="form-check">
+          <!-- <div class="form-check">
             <input class="form-check-input paymentOption" type="radio" name="flexRadioDefault5"
               value=" None(member of Pratibimb)">
             <label class="form-check-label" for="flexRadioDefault5">
               None(member of Pratibimb)
             </label>
-          </div>
+          </div> -->
         </div>
         <div class="mb-3 reg_gs">
           <p>Screenshot of payment</p>
@@ -295,13 +304,7 @@
       <div class="box3" style="display: none;">
         <h5 class="text-center reg_head">For Non-Sgsits Students :</h5>
         <div class="form-group row form-inp">
-          <label for="inputEmail3" class="col-sm-2 col-form-label">Branch</label>
-          <div class="col-sm-10">
-            <input type="text" class="form-control" id="branch">
-          </div>
-        </div>
-        <div class="form-group row form-inp">
-          <label for="inputEmail3" class="col-sm-2 col-form-label">Enrollment Number</label>
+          <label for="inputEmail3" class="col-sm-2 col-form-label">Name of your Institute</label>
           <div class="col-sm-10">
             <input type="text" class="form-control" id="enrolNo">
           </div>
@@ -331,23 +334,23 @@
         <div class="mb-3 form-check reg_gs">
           <div class="form-check">
             <input class="form-check-input offlinePayment" type="radio" name="flexRadioDefault3"
-              value="Willing to pay 60/- for one workshop(material cost included)">
+              value="Willing to pay 80/- for one workshop(material cost included)">
             <label class="form-check-label" for="flexRadioDefault3">
-              Willing to pay 60/- for one workshop(material cost included)
+              Willing to pay 80/- for one workshop(material cost included)
             </label>
           </div>
           <div class="form-check">
             <input class="form-check-input offlinePayment" type="radio" name="flexRadioDefault3"
-              value="Willing to pay 20/- for one workshop(material cost Excluded)">
+              value="Willing to pay 30/- for one workshop(material cost Excluded)">
             <label class="form-check-label" for="flexRadioDefault3">
-              Willing to pay 20/- for one workshop(material cost Excluded)
+              Willing to pay 30/- for one workshop(material cost Excluded)
             </label>
           </div>
           <div class="form-check">
             <input class="form-check-input offlinePayment" type="radio" name="flexRadioDefault3"
-              value="Willing to pay 100/- for one workshop(material cost included)">
+              value="Willing to pay 150/- for both workshops(material cost included)">
             <label class="form-check-label" for="flexRadioDefault3">
-              Willing to pay 100/- for one workshop(material cost included)
+              Willing to pay 150/- for both workshops(material cost included)
             </label>
           </div>
           <div class="form-check">
@@ -357,26 +360,26 @@
               Not attending offline
             </label>
           </div>
-          <div class="form-check">
+          <!-- <div class="form-check">
             <input class="form-check-input offlinePayment" type="radio" name="flexRadioDefault3"
               value=" Member of Pratibimb(need not pay)">
             <label class="form-check-label" for="flexRadioDefault3">
               Member of Pratibimb(need not pay)
             </label>
-          </div>
+          </div> -->
         </div>
         <p class="reg_gs">For Online attendees</p>
         <div class="mb-3 form-check reg_gs">
           <div class="form-check">
             <input class="form-check-input onlinePayment" type="radio" name="flexRadioDefault4"
-              value=" Willing to pay 20/- for one of the workshop">
+              value=" Willing to pay 30/- for one of the workshop">
             <label class="form-check-label" for="flexRadioDefault4">
               Willing to pay 20/- for one of the workshop
             </label>
           </div>
           <div class="form-check">
             <input class="form-check-input onlinePayment" type="radio" name="flexRadioDefault4"
-              value="Willing to pay 30/- for both the workshop">
+              value="Willing to pay 50/- for both the workshop">
             <label class="form-check-label" for="flexRadioDefault4">
               Willing to pay 30/- for both the workshop
             </label>
@@ -388,13 +391,13 @@
               Not attending online
             </label>
           </div>
-          <div class="form-check">
+          <!-- <div class="form-check">
             <input class="form-check-input onlinePayment" type="radio" name="flexRadioDefault4"
               value="Member of Pratibimb(need not pay)">
             <label class="form-check-label" for="flexRadioDefault4">
               Member of Pratibimb(need not pay)
             </label>
-          </div>
+          </div> -->
         </div>
 
         <div class="mb-3 reg_gs">
@@ -434,13 +437,13 @@
               Phonepe
             </label>
           </div>
-          <div class="form-check">
+          <!-- <div class="form-check">
             <input class="form-check-input paymentOption" type="radio" name="flexRadioDefault5"
               value=" None(member of Pratibimb)">
             <label class="form-check-label" for="flexRadioDefault5">
               None(member of Pratibimb)
             </label>
-          </div>
+          </div> -->
         </div>
         <div class="mb-3 reg_gs">
           <p>Screenshot of payment</p>
