Updated path of teaser

--- a/new_event.html
+++ b/new_event.html
@@ -121,7 +121,7 @@ TIME– 3:00 PM to 6:00 PM
   </div>
   <div class="teaser">
     <h2 class="text-center" style="color:#ffffff">Teaser</h2>
-    <video src="img/Teaser Kalopsiav12.mp4" controls></video>
+    <video src="img/Teaser Kalopsiav_20mb.mp4" controls></video>
   </div>
   <div class="participate" style="background: #fff;">
     <!-- <img class="part_img" src="img/Register_uibutton.png" alt=""> -->
