--- a/form.html
+++ b/form.html
@@ -80,14 +80,14 @@
   <h3 class="text-center reg_head" style="color: #B91900;">Registration form - Kalopsia</h3>
   <form id="Registration-Kalopsia" autocomplete="off">
     <form style="margin-top:2rem;" id="membershipForm" autocomplete="off">
-      <div class="alert1" style=" width: 80%;
+<!--       <div class="alert1" style=" width: 80%;
       background-color: #B91900;
       color: #fff;
       height: 5vh;
       text-align: center;
       padding: 2px 2px;
       margin-bottom: 15px;
-      display: none;">You have successfully registered for Kalopsia!</div>
+      display: none;">You have successfully registered for Kalopsia!</div> -->
     <div class="form-group row form-inp">
       <label for="inputEmail3" class="col-sm-2 col-form-label">Name</label>
       <div class="col-sm-10">
