--- a/new_event.html
+++ b/new_event.html
@@ -116,7 +116,8 @@ TIME– 3:00 PM to 6:00 PM
       <!-- <h6 class="web-h6">Sponsored By:</h6> -->
       <!-- <a href="https://bluepen.co.in/" class="web-link"> BLUEPEN</a> -->
     </div>
-    <div class="meraki_image"><img src="img/Kalopsia Poster (1) 1.png" alt="" srcset=""></div>
+    <div class="meraki_image">
+    </div>
 
   </div>
   <div class="teaser">
