--- a/index.html
+++ b/index.html
@@ -69,8 +69,11 @@
 
    <div class="header-image">
               <img src="img/Kalopsia.png" class="event-main-image" />
-        <a href="new_event.html">
+        <a href="form.html">
           <img src="img/Register_uibutton.png" class="event-button" />
+        </a>
+        <a href="new_event.html">
+          <img src="img/know.png" class="event-button2" />
         </a>
         <a href="new_event.html">
           <!-- <img src="img/Kalopsia.png" class="event-mobile" /> -->
