--- a/form.html
+++ b/form.html
@@ -80,7 +80,7 @@
   <h3 class="text-center reg_head" style="color: #B91900;">Registration form - Kalopsia</h3>
   <form id="Registration-Kalopsia" autocomplete="off">
     <form style="margin-top:2rem;" id="membershipForm" autocomplete="off">
-<!--       <div class="alert1" style=" width: 80%;
+      <!-- <div class="alert1" style=" width: 80%;
       background-color: #B91900;
       color: #fff;
       height: 5vh;
@@ -104,6 +104,12 @@
       <label for="inputEmail3" class="col-sm-2 col-form-label">Whatsapp Number</label>
       <div class="col-sm-10">
         <input type="text" class="form-control" id="whatsappNumber" required>
+      </div>
+    </div>
+    <div class="form-group row form-inp">
+      <label for="inputEmail3" class="col-sm-2 col-form-label">E-mail</label>
+      <div class="col-sm-10">
+        <input type="email" class="form-control " id="email" required>
       </div>
     </div>
     <p class="reg_gs">Are you a SGSITS Student?</p>
@@ -306,7 +312,7 @@
         <div class="form-group row form-inp">
           <label for="inputEmail3" class="col-sm-2 col-form-label">Name of your Institute</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" id="enrolNo">
+            <input type="text" class="form-control" id="instituteName">
           </div>
         </div>
         <p class="reg_gs">What workshop are you attending?</p>
@@ -374,14 +380,14 @@
             <input class="form-check-input onlinePayment" type="radio" name="flexRadioDefault4"
               value=" Willing to pay 30/- for one of the workshop">
             <label class="form-check-label" for="flexRadioDefault4">
-              Willing to pay 30/- for one of the workshop
+              Willing to pay 20/- for one of the workshop
             </label>
           </div>
           <div class="form-check">
             <input class="form-check-input onlinePayment" type="radio" name="flexRadioDefault4"
               value="Willing to pay 50/- for both the workshop">
             <label class="form-check-label" for="flexRadioDefault4">
-              Willing to pay 50/- for both the workshop
+              Willing to pay 30/- for both the workshop
             </label>
           </div>
           <div class="form-check">
