corrected class name

--- a/form.html
+++ b/form.html
@@ -115,14 +115,14 @@
     <p class="reg_gs">Are you a SGSITS Student?</p>
     <div class="mb-3 form-check reg_gs">
       <div class="form-check" onclick="myFunction1()">
-        <input class="form-check-input studentOfPratibimb" type="radio" name="flexRadioDefault" value="YES"
+        <input class="form-check-input gsStudent" type="radio" name="flexRadioDefault" value="YES"
           id="gsStudent" required>
         <label class="form-check-label" for="flexRadioDefault">
           YES
         </label>
       </div>
       <div class="form-check" onclick="myFunction2()">
-        <input class="form-check-input studentOfPratibimb" type="radio" name="flexRadioDefault" value="NO"
+        <input class="form-check-input gsStudent" type="radio" name="flexRadioDefault" value="NO"
           id="gsStudent">
         <label class="form-check-label" for="flexRadioDefault">
           NO
