--- a/form.html
+++ b/form.html
@@ -185,7 +185,7 @@
           </label>
         </div>
       </div>
-      <p class="reg_gs">For Offline attendees</p>
+<!--       <p class="reg_gs">For Offline attendees</p>
       <div class="mb-3 form-check reg_gs">
         <div class="form-check">
           <input class="form-check-input offlinePayment" type="radio" name="flexRadioDefault3"
@@ -215,13 +215,13 @@
             Not attending offline
           </label>
         </div>
-        <!-- <div class="form-check">
+        <div class="form-check">
           <input class="form-check-input offlinePayment" type="radio" name="flexRadioDefault3"  value=" Member of Pratibimb(need not pay)">
           <label class="form-check-label" for="flexRadioDefault3">
             Member of Pratibimb(need not pay)
           </label>
-        </div> -->
-      </div>
+        </div>
+      </div> -->
         <p class="reg_gs">For Online attendees</p>
         <div class="mb-3 form-check reg_gs">
           <div class="form-check">
@@ -336,7 +336,7 @@
             </label>
           </div>
         </div>
-        <p class="reg_gs">For Offline attendees</p>
+<!--         <p class="reg_gs">For Offline attendees</p>
         <div class="mb-3 form-check reg_gs">
           <div class="form-check">
             <input class="form-check-input offlinePayment" type="radio" name="flexRadioDefault3"
@@ -366,14 +366,14 @@
               Not attending offline
             </label>
           </div>
-          <!-- <div class="form-check">
+          <div class="form-check">
             <input class="form-check-input offlinePayment" type="radio" name="flexRadioDefault3"
               value=" Member of Pratibimb(need not pay)">
             <label class="form-check-label" for="flexRadioDefault3">
               Member of Pratibimb(need not pay)
             </label>
-          </div> -->
-        </div>
+          </div>
+        </div> -->
         <p class="reg_gs">For Online attendees</p>
         <div class="mb-3 form-check reg_gs">
           <div class="form-check">
