--- a/form.html
+++ b/form.html
@@ -238,13 +238,13 @@
               Willing to pay 30/- for both the workshop
             </label>
           </div>
-          <div class="form-check">
+<!--           <div class="form-check">
             <input class="form-check-input onlinePayment" type="radio" name="flexRadioDefault4"
               value="Not attending online">
             <label class="form-check-label" for="flexRadioDefault4">
               Not attending online
             </label>
-          </div>
+          </div> -->
           <!-- <div class="form-check">
             <input class="form-check-input onlinePayment" type="radio" name="flexRadioDefault4"
               value="Member of Pratibimb(need not pay)">
@@ -390,13 +390,13 @@
               Willing to pay 30/- for both the workshop
             </label>
           </div>
-          <div class="form-check">
+<!--           <div class="form-check">
             <input class="form-check-input onlinePayment" type="radio" name="flexRadioDefault4"
               value="Not attending online">
             <label class="form-check-label" for="flexRadioDefault4">
               Not attending online
             </label>
-          </div>
+          </div> -->
           <!-- <div class="form-check">
             <input class="form-check-input onlinePayment" type="radio" name="flexRadioDefault4"
               value="Member of Pratibimb(need not pay)">
