--- a/new_event.html
+++ b/new_event.html
@@ -106,11 +106,11 @@
       <p style="margin-bottom: 40px;">January, 2022</p>
       Kalopsia will hit you with a double blast; it will let you instil beautiful panoramas on stones, through STONE ART and stitch your favourite characters alive, through MANIKIN-MAKING.
       <br><br>
-The event, a two Sunday affair is an offline event (will also be streamed online) which will take place on the following dates:<br><br>
+The event, a two Sunday affair is an online event which will take place on the following dates:<br><br>
 9th January 2022– Stone Art<br>
 16th January 2022– Manikin Making<br><br>
 
-VENUE– Silveria Hall, SGSITS Campus, Indore<br>
+
 TIME– 3:00 PM to 6:00 PM
 
       <!-- <h6 class="web-h6">Sponsored By:</h6> -->
@@ -147,7 +147,7 @@ TIME– 3:00 PM to 6:00 PM
       <li>Registrations end on the 8th and 15th of January, 2022 for Stone Art and Manikin-Making Workshops respectively.</li>
       <li>On-Spot Registrations will be considered.</li>
       <li>All the COVID Guidelines specified by the State Govt. need to be followed by each participant.</li>
-      <li>For those who register for online workshop will get the link shared with them beforehand.</li>
+      <li>For those who register for workshop will get the link shared with them beforehand.</li>
       <li>Members do not need to pay any cost for registration, but need to keep their membership ids safe for further confirmation.</li>
       <li>The participants will be kept updated on the WhatsApp groups they’ll be asked to join after successful registration. </li>
       <li>Follow Pratibimb on Instagram, Facebook, LinkedIn and Discord to keep up with the updates.</li>
