--- a/form.html
+++ b/form.html
@@ -235,7 +235,7 @@
             <input class="form-check-input onlinePayment" type="radio" name="flexRadioDefault4"
               value="Willing to pay 30/- for both the workshop">
             <label class="form-check-label" for="flexRadioDefault4">
-              Willing to pay 30/- for both the workshop
+              Willing to pay 40/- for both the workshops
             </label>
           </div>
 <!--           <div class="form-check">
@@ -380,14 +380,14 @@
             <input class="form-check-input onlinePayment" type="radio" name="flexRadioDefault4"
               value=" Willing to pay 30/- for one of the workshop">
             <label class="form-check-label" for="flexRadioDefault4">
-              Willing to pay 20/- for one of the workshop
+              Willing to pay 30/- for one of the workshop
             </label>
           </div>
           <div class="form-check">
             <input class="form-check-input onlinePayment" type="radio" name="flexRadioDefault4"
               value="Willing to pay 50/- for both the workshop">
             <label class="form-check-label" for="flexRadioDefault4">
-              Willing to pay 30/- for both the workshop
+              Willing to pay 50/- for both the workshops
             </label>
           </div>
 <!--           <div class="form-check">
