--- a/form.html
+++ b/form.html
@@ -166,24 +166,24 @@
       </div>
       <p class="reg_gs">What workshop are you attending?</p>
       <div class="mb-3 form-check reg_gs">
-        <div class="form-check">
+<!--         <div class="form-check">
           <input class="form-check-input wsAttending" type="radio" name="flexRadioDefault2" value="Stone art">
           <label class="form-check-label" for="flexRadioDefault2">
             Stone art
           </label>
-        </div>
+        </div> -->
         <div class="form-check">
           <input class="form-check-input wsAttending" type="radio" name="flexRadioDefault2" value="Manikin Making">
           <label class="form-check-label" for="flexRadioDefault2">
             Manikin Making
           </label>
         </div>
-        <div class="form-check">
+<!--         <div class="form-check">
           <input class="form-check-input wsAttending" type="radio" name="flexRadioDefault2" value="Both">
           <label class="form-check-label" for="flexRadioDefault2">
             Both
           </label>
-        </div>
+        </div> -->
       </div>
 <!--       <p class="reg_gs">For Offline attendees</p>
       <div class="mb-3 form-check reg_gs">
@@ -226,18 +226,18 @@
         <div class="mb-3 form-check reg_gs">
           <div class="form-check">
             <input class="form-check-input onlinePayment" type="radio" name="flexRadioDefault4"
-              value=" Willing to pay 20/- for one of the workshop">
+              value=" Willing to pay 20/- for Manikin making">
             <label class="form-check-label" for="flexRadioDefault4">
-              Willing to pay 20/- for one of the workshop
+              Willing to pay 20/- for Manikin making
             </label>
           </div>
-          <div class="form-check">
+<!--           <div class="form-check">
             <input class="form-check-input onlinePayment" type="radio" name="flexRadioDefault4"
               value="Willing to pay 30/- for both the workshop">
             <label class="form-check-label" for="flexRadioDefault4">
               Willing to pay 40/- for both the workshops
             </label>
-          </div>
+          </div> -->
 <!--           <div class="form-check">
             <input class="form-check-input onlinePayment" type="radio" name="flexRadioDefault4"
               value="Not attending online">
@@ -317,24 +317,24 @@
         </div>
         <p class="reg_gs">What workshop are you attending?</p>
         <div class="mb-3 form-check reg_gs">
-          <div class="form-check">
+<!--           <div class="form-check">
             <input class="form-check-input wsAttending" type="radio" name="flexRadioDefault2" value="Stone art">
             <label class="form-check-label" for="flexRadioDefault2">
               Stone art
             </label>
-          </div>
+          </div> -->
           <div class="form-check">
             <input class="form-check-input wsAttending" type="radio" name="flexRadioDefault2" value="Manikin Making">
             <label class="form-check-label" for="flexRadioDefault2">
               Manikin Making
             </label>
           </div>
-          <div class="form-check">
+<!--           <div class="form-check">
             <input class="form-check-input wsAttending" type="radio" name="flexRadioDefault2" value="Both">
             <label class="form-check-label" for="flexRadioDefault2">
               Both
             </label>
-          </div>
+          </div> -->
         </div>
 <!--         <p class="reg_gs">For Offline attendees</p>
         <div class="mb-3 form-check reg_gs">
@@ -378,18 +378,18 @@
         <div class="mb-3 form-check reg_gs">
           <div class="form-check">
             <input class="form-check-input onlinePayment" type="radio" name="flexRadioDefault4"
-              value=" Willing to pay 30/- for one of the workshop">
+              value=" Willing to pay 30/- for Manikin making">
             <label class="form-check-label" for="flexRadioDefault4">
-              Willing to pay 30/- for one of the workshop
+              Willing to pay 30/- for Manikin making
             </label>
           </div>
-          <div class="form-check">
+<!--           <div class="form-check">
             <input class="form-check-input onlinePayment" type="radio" name="flexRadioDefault4"
               value="Willing to pay 50/- for both the workshop">
             <label class="form-check-label" for="flexRadioDefault4">
               Willing to pay 50/- for both the workshops
             </label>
-          </div>
+          </div> -->
 <!--           <div class="form-check">
             <input class="form-check-input onlinePayment" type="radio" name="flexRadioDefault4"
               value="Not attending online">
