--- a/index.html
+++ b/index.html
@@ -68,13 +68,14 @@
 </nav>
 
    <div class="header-image">
-              <img src="img/Kalopsia.png" class="event-main-image" />
-        <a href="form.html">
+              <img src="img/graphathon-banner.jpeg" class="event-main-image" />
+        <img src="img/Graffathon Logo.png" class="event-button3" />    
+        <!-- <a href="form.html">
           <img src="img/Register_uibutton.png" class="event-button" />
         </a>
         <a href="new_event.html">
-          <img src="img/know.png" class="event-button2" />
-        </a>
+          <img src="img/know more.png" class="event-button2" />
+        </a> -->
         <a href="new_event.html">
           <!-- <img src="img/Kalopsia.png" class="event-mobile" /> -->
         </a>
