--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
           <li class="nav-item links">
                 <a class="nav-link links" href="eve1.html">memoirs.</a>
             </li>
+           <li class="nav-item links">
+                <a class="nav-link links" href="eve1.html">graffathon.</a>
+            </li>
            
         </ul>
         <ul class="navbar-nav sm-icons mr-0 cr">
@@ -70,10 +73,10 @@
    <div class="header-image">
               <img src="img/graphathon-banner.jpeg" class="event-main-image" />
         <img src="img/Graffathon Logo.png" class="event-button3" />    
-        <!-- <a href="form.html">
+        <a href="https://forms.gle/Y9tVjWLxKMjWcyHb9">
           <img src="img/Register_uibutton.png" class="event-button" />
         </a>
-        <a href="new_event.html">
+       <!--  <a href="new_event.html">
           <img src="img/know more.png" class="event-button2" />
         </a> -->
         <a href="new_event.html">
