--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <a class="nav-link links" href="eve1.html">memoirs.</a>
         </li>
          <li class="nav-item links">
-          <a class="nav-link links" href="new_event.html">graffathon..</a>
+          <a class="nav-link links" href="new_event.html">graffathon.</a>
         </li>
 
       </ul>
