--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark " style="background-color:#2B2929;">
-    <a class="navbar-brand" href="/"><img class="logo" src="img/Pratibimb logo shirt.png"></a>
+    <a class="navbar-brand" href="index.html"><img class="logo" src="img/Pratibimb logo shirt.png"></a>
     <button class="navbar-toggler cl" type="button" data-toggle="collapse" data-target="#myNavbarToggler10"
       aria-controls="myNavbarToggler10" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
